# Technical_Test

./: .gitignore  README.md  docker-compose.yml  vibe_log.md
.agents/rules/: 01-system-rules.md
backend/: Dockerfile  pyproject.toml
backend/app/: main.py  scraper.py  tasks.py
frontend/: Dockerfile  index.html  package.json  tailwind.config.js
frontend/src/: App.tsx
nginx/: Dockerfile  nginx.conf
question_prompt/: 문제_해결.txt  자료_조사.txt
scraped_data/co/: scrap_co_01.md  scrap_co_02.md  scrap_co_03.md  scrap_co_04.md  scrap_co_05.md
scraped_data/easecloud/: scrap_easecloud_01.md
scraped_data/hada/: scrap_hada_01.md
vibe_prompt_log/: 01_프로젝트_환경_구성_01.txt  01_프로젝트_환경_구성_01_implementation_plan.md  01_프로젝트_환경_구성_01_task.md  01_프로젝트_환경_구성_01_walkthrough.md  01_프로젝트_환경_구성_02.txt  01_프로젝트_환경_구성_02_implementation_plan_01.md  01_프로젝트_환경_구성_02_implementation_plan_02.md  01_프로젝트_환경_구성_02_implementation_plan_03.md  01_프로젝트_환경_구성_02_task.md  02_기능구현_웹 스크랩핑_01.txt  02_기능구현_웹 스크랩핑_01_implementation_plan.md  02_기능구현_웹 스크랩핑_02.txt  02_기능구현_웹 스크랩핑_02_implementation_plan.md  02_기능구현_웹 스크랩핑_03.txt  02_기능구현_웹 스크랩핑_04_implementation_plan.md  02_기능구현_웹 스크랩핑_05.txt  02_기능구현_웹 스크랩핑_05_implementation_plan.md  02_기능구현_웹 스크랩핑_05_task.md  02_기능구현_웹 스크랩핑_06.txt  02_기능구현_웹 스크랩핑_07.txt  02_기능구현_웹 스크랩핑_08.txt  02_기능구현_웹 스크랩핑_09.txt  02_기능구현_웹 스크랩핑_09_implementation_plan.md  02_기능구현_웹 스크랩핑_09_task.md  02_기능구현_웹 스크랩핑_10_implementation_plan.md  02_기능구현_웹 스크랩핑_10_scratchpad_z1qxdtk8.md  02_기능구현_웹 스크랩핑_10_walkthrough.md  03_중간정리_readme 파일 정리.txt
(+1 files in other folders)
