[project]
name = "backend"
version = "0.1.0"
description = "FastAPI backend for crawling and keyword information extraction"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn>=0.28.0",
    "taskiq[redis]>=0.11.0",
    "taskiq[reload]>=0.11.0",
    "taskiq-redis>=0.10.0",
    "httpx>=0.27.0",
    "beautifulsoup4>=4.12.3",
    "crawl4ai>=0.3.8",
    "playwright>=1.42.0",
]

[tool.uv]
dev-dependencies = []
